/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/place.proto";
import public "models/search.proto";
import public "models/trip.proto";

message TripResult {

  // Optional context of this trip result.
  string context = 414660016;

  Search searchBody = 174129303;

  // Timestamp when your server has started the request
  double serverRequestTimestamp = 320885932;

  // Timestamp when your server has finished the request
  double serverResponseTimestamp = 267088686;

  Place origin = 471748827;

  Place destination = 356105204;

  // An array of found trips to your search
  repeated Trip trips = 110629102;

  repeated AdditionalInformation additionalInformation = 467380604;

}
